QueryInfoForm fix for ToggleIcon alignment with various form input types (part 2)

--- a/packages/components/src/theme/form.scss
+++ b/packages/components/src/theme/form.scss
@@ -342,6 +342,17 @@ textarea.form-control {
     text-align: left;
 }
 
+.query-info-form .toggle-group-icon {
+    padding-top: 7px;
+}
 .query-info-form .control-label {
-    padding-top: 0;
+    padding-top: 7px;
+    .toggle-group-icon, &.textarea-control-label {
+        padding-top: 0;
+    }
+}
+.query-info-form .checkbox-input-form-row {
+    .control-label, .toggle-group-icon {
+        padding-top: 0;
+    }
 }
